--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Editorial</strong> by HTML5 UP</a>
+									<a href="index.html" class="logo">Home</a>
 									<ul class="icons">
+										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="#" class="icon brands fa-github"><span class="label">github</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</header>
@@ -37,7 +39,7 @@
 										</header>
 										<p>My interests</p>
 									</div>
-									<p><span class="image left"><img src="images/pic1.jpeg" alt="" /></span></p>
+									<p><span class="image right"><img src="images/pic1.jpeg" alt="" /></span></p>
 								</section>
 						</div>
 					</div>
