--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 								<header id="header">
 									<a href="index.html" class="logo">Home</a>
 									<ul class="icons">
-										<li><a href="#" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
+										<li><a href="https://www.linkedin.com/in/helen-zhang-tianyue" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="#" class="icon brands fa-github"><span class="label">github</span></a></li>
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
@@ -34,8 +34,8 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h4>Tianyue(Helen) Zhang</h4>
-											<p>M.Sc.in Computer Science, UBC</p>
+											<h3>Tianyue(Helen) Zhang</h3>
+											<p>M.Sc. in Computer Science, UBC</p>
 										</header>
 										<p>My interests</p>
 									</div>
@@ -54,7 +54,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<li><a href="index.html">Home</a></li>
 										<li><a href="resume.html">Resume</a></li>
 										<li><a href="teaching.html">Teaching</a></li>
 									</ul>
