--- a/teaching.html
+++ b/teaching.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo">Home</a>
+									<a class="logo">Teaching</a>
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/helen-zhang-tianyue" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="https://github.com/tianyuehz" class="icon brands fa-github"><span class="label">github</span></a></li>
@@ -33,18 +33,8 @@
 							<!-- Banner -->
 								<section id="banner">
 									<div class="content">
-										<header>
-											<h2>Tianyue(Helen) Zhang 张天玥</h2>
-											<p>M.Sc. in Computer Science, UBC</p>
-										</header>
-										<p>I am a current master's student in computer science at the University of
-											British Columbia, under the supervision of Professor Mark Schmidt. My interests
-											are machine learning, reinforcement learning,
-											optimization. Previously, I graduated from UBC with combined
-											honours in Computer Science and Mathematics.</p>
+										<p>Some stuff</p>
 									</div>
-									<div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
-									<div><img src="images/pic1.jpeg" alt="" width="240" height="320"/></div>
 								</section>
 						</div>
 					</div>
@@ -72,7 +62,6 @@
 									</header>
 									<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>
-										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
 									</ul>
 								</section>
 
