--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo">Home</a>
+<!--									<a href="index.html" class="logo">Home</a>-->
 									<ul class="icons">
 										<li><a href="https://www.linkedin.com/in/helen-zhang-tianyue" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
 										<li><a href="https://github.com/tianyuehz" class="icon brands fa-github"><span class="label">github</span></a></li>
@@ -38,50 +38,85 @@
 											<p>M.Sc. in Computer Science, UBC</p>
 										</header>
 										<p>I am a current master's student in computer science at the University of
-											British Columbia, under the supervision of Professor Mark Schmidt. My interests
+											British Columbia, under the supervision of Dr.
+											<a href="https://www.cs.ubc.ca/~schmidtm/">Mark Schmidt</a>. My interests
 											are machine learning, reinforcement learning,
 											optimization. Previously, I graduated from UBC with combined
 											honours in Computer Science and Mathematics.</p>
+										<p>Here is my <a href="images/CV_2_0.pdf" download="Helen_Zhang_CV">CV</a>.</p>
+										<p>Here are some fun links:
+											<a href="https://ml.ubc.ca/mlrg/">MLRG</a>
+											<a href="https://mild.ubc.ca/">MILD</a></p>
+
 									</div>
 									<div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
 									<div><img src="images/pic1.jpeg" alt="" width="240" height="320"/></div>
 								</section>
-						</div>
-					</div>
-
-				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
-
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Home</a></li>
-										<li><a href="resume.html">Resume</a></li>
-										<li><a href="teaching.html">Teaching</a></li>
-									</ul>
-								</nav>
-
-							<!-- Section -->
-								<section>
-									<header class="major">
-										<h2>Get in touch</h2>
-									</header>
-									<ul class="contact">
+								<section id="project">
+									<div class="content">
+										<header>
+											<h3>Projects</h3>
+										</header>
+										<p>Project 1</p>
+										<p>Project 2</p>
+									</div>
+								</section>
+								<section id="talk">
+									<div class="content">
+										<header>
+											<h3>Talks</h3>
+										</header>
+										<p>Talk 1</p>
+										<p>Talk 2</p>
+									</div>
+								</section>
+							<section id="Contact">
+									<div class="content">
+										<header>
+											<h3>Contact</h3>
+										</header>
+										<ul class="contact">
 										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>
 										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
 									</ul>
+									</div>
 								</section>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
-
 						</div>
+					</div>
+
+<!--				&lt;!&ndash; Sidebar &ndash;&gt;-->
+<!--					<div id="sidebar">-->
+<!--						<div class="inner">-->
+
+<!--&lt;!&ndash;							&lt;!&ndash; Menu &ndash;&gt;&ndash;&gt;-->
+<!--&lt;!&ndash;								<nav id="menu">&ndash;&gt;-->
+<!--&lt;!&ndash;									<header class="major">&ndash;&gt;-->
+<!--&lt;!&ndash;										<h2>Menu</h2>&ndash;&gt;-->
+<!--&lt;!&ndash;									</header>&ndash;&gt;-->
+<!--&lt;!&ndash;									<ul>&ndash;&gt;-->
+<!--&lt;!&ndash;										<li><a href="index.html">Home</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;										<li><a href="Projects.html">Projects</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;										<li><a href="Talks.html">Talks</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;									</ul>&ndash;&gt;-->
+<!--&lt;!&ndash;								</nav>&ndash;&gt;-->
+
+<!--							&lt;!&ndash; Section &ndash;&gt;-->
+<!--								<section>-->
+<!--									<header class="major">-->
+<!--										<h2>Get in touch</h2>-->
+<!--									</header>-->
+<!--									<ul class="contact">-->
+<!--										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>-->
+<!--										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>-->
+<!--									</ul>-->
+<!--								</section>-->
+
+<!--							&lt;!&ndash; Footer &ndash;&gt;-->
+<!--								<footer id="footer">-->
+<!--									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>-->
+<!--								</footer>-->
+
+<!--						</div>-->
 					</div>
 
 			</div>
