--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 											<p>M.Sc. in Computer Science, UBC</p>
 										</header>
 										<p>I am a current master's student in computer science at the University of
-											British Columbia, under the supervision of Dr.
-											<a href="https://www.cs.ubc.ca/~schmidtm/">Mark Schmidt</a>. My interests
+											British Columbia, under the supervision of
+											<a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. My interests
 											are machine learning, reinforcement learning,
 											optimization. Previously, I graduated from UBC with combined
 											honours in Computer Science and Mathematics.</p>
-										<p>Here is my <a href="images/CV_2_0.pdf" download="Helen_Zhang_CV">CV</a>.</p>
+										<p>Here is my <a href="images/CV_2_0.pdf" target="_blank">CV</a>.</p>
 										<p>Here are some fun links:
 											<a href="https://ml.ubc.ca/mlrg/">MLRG</a>
 											<a href="https://mild.ubc.ca/">MILD</a></p>
@@ -57,17 +57,48 @@
 										<header>
 											<h3>Projects</h3>
 										</header>
-										<p>Project 1</p>
-										<p>Project 2</p>
+									<div class="row">
+											<div class="col-6 col-12-small">
+												<h4>Transfer Learning via Online System Identification.</h4>
+											<a href="images/CPSC_533V_Project_Report.pdf" target="_blank">PDF</a>
+											<a href="https://github.com/tianyuehz/533VProject-Transfer-Learning-on-CartPole.git" target="_blank">Code</a>
+										<p>In this project, we implemented Soft Actor-Critic method on OpenAI gym classic
+											control games with Proximal Policy optimization method and GAE lambda advantage
+											function. We trained universal policy with dynamic system identification to aim to reduce Sim-to-Real gap.</p>
+										</div>
+<!--											<div class="col-6 col-12-small">-->
+<!--												<p>Image</p>-->
+<!--											</div>-->
 									</div>
+										</div>
 								</section>
 								<section id="talk">
 									<div class="content">
 										<header>
 											<h3>Talks</h3>
 										</header>
-										<p>Talk 1</p>
-										<p>Talk 2</p>
+										<div class="row">
+											<div class="col-6 col-12-small">
+										<h4>Language Modles are Few-shot Learners: MLRG 2022 Fall.
+										</h4>
+										<a href="images/GPT-3.pdf" target="_blank">Slides</a>
+										<p>Summary</p>
+											</div>
+<!--											<div class="col-6 col-12-small">-->
+<!--												<p>Image</p>-->
+<!--											</div>-->
+									</div>
+										</div>
+								</section>
+								<section id="teaching">
+									<div class="content">
+										<header>
+											<h3>Teaching</h3>
+										</header>
+										<p>July 2017- Present: CPSC 532M/340: Machine Learning and Data Mining</p>
+										<p>Jan. 2018- Apr. 2018: Math 152: Linear Systems</p>
+										<p>Jan. 2017- Apr. 2018: CPSC 121: Models of Computation</p>
+										<p>July 2017- Aug. 2017: Math 102: Integral Calculus</p>
 									</div>
 								</section>
 							<section id="Contact">
@@ -76,8 +107,9 @@
 											<h3>Contact</h3>
 										</header>
 										<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>
-										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
+										<li class="icon solid fa-envelope"><a href="mailto:helenzhangtianyue@gmail.com">helenzhangtianyue@gmail.com</a></li>
+										<li class="icon solid fa-phone">(778) 918-6289</li>
+											<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
 									</ul>
 									</div>
 								</section>
