--- a/index.html
+++ b/index.html
@@ -5,160 +5,204 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-	<head>
-		<title>Home</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body class="is-preload">
+<head>
+    <title>Home</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
+    <link rel="stylesheet" href="assets/css/main.css"/>
+</head>
+<body class="is-preload">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+<!-- Wrapper -->
+<div id="wrapper">
 
-				<!-- Main -->
-					<div id="main">
-						<div class="inner">
+    <!-- Main -->
+    <div id="main">
+        <div class="inner">
 
-							<!-- Header -->
-								<header id="header">
-<!--									<a href="index.html" class="logo">Home</a>-->
-									<ul class="icons">
-										<li><a href="https://www.linkedin.com/in/helen-zhang-tianyue" class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
-										<li><a href="https://github.com/tianyuehz" class="icon brands fa-github"><span class="label">github</span></a></li>
-										<li><a href="https://www.instagram.com/helennnnnnnzhang/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-									</ul>
-								</header>
+            <!-- Header -->
+            <header id="header">
+                <!--									<a href="index.html" class="logo">Home</a>-->
+                <ul class="icons">
+                    <li><a href="https://www.linkedin.com/in/helen-zhang-tianyue" class="icon brands fa-linkedin"><span
+                            class="label">Linkedin</span></a></li>
+                    <li><a href="https://github.com/tianyuehz" class="icon brands fa-github"><span
+                            class="label">github</span></a></li>
+                    <li><a href="https://www.instagram.com/helennnnnnnzhang/" class="icon brands fa-instagram"><span
+                            class="label">Instagram</span></a></li>
+                </ul>
+            </header>
 
-							<!-- Banner -->
-								<section id="banner">
-									<div class="content">
-										<header>
-											<h2>Tianyue(Helen) Zhang 张天玥</h2>
-											<p>M.Sc. in Computer Science, UBC</p>
-										</header>
-										<p>I am a current master's student in computer science at the University of
-											British Columbia, under the supervision of
-											<a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. My interests
-											are machine learning, reinforcement learning,
-											optimization. Previously, I graduated from UBC with combined
-											honours in Computer Science and Mathematics.</p>
-										<p>Here is my <a href="images/CV_2_0.pdf" target="_blank">CV</a>.</p>
-										<p>Here are some fun links:
-											<a href="https://ml.ubc.ca/mlrg/">MLRG</a>
-											<a href="https://mild.ubc.ca/">MILD</a></p>
+            <!-- Banner -->
+            <section id="banner">
+                <div class="content">
+                    <header>
+                        <h2>Tianyue (Helen) Zhang 张天玥</h2>
+                        <p>M.Sc. in Computer Science, UBC</p>
+                    </header>
+                    <p>I am a current master's student in computer science at the University of
+                        British Columbia, under the supervision of
+                        <a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. I will be starting my Ph.D. this fall at Mila/Université de Montréal under the
+						supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
+						Previously, I graduated from UBC with combined
+                        honours in Computer Science and Mathematics.</p>
+					<p>My research interests broadly includes machine learning, reinforcement learning and
+                        optimization. My goal is to understand and optimize algorithms for efficient and practical decision-making under uncertainty</p>
+                    <p>Here is my <a href="images/CV_2_0.pdf" target="_blank">CV</a>, and a picture of my <a href="images/cat.jpg" target="_blank">cat</a>.</p>
+                </div>
+                <div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
+                <div><img src="images/pic1.jpeg" alt="" width="240" height="320"/></div>
+            </section>
+			<section id="Publications">
+                <div class="content">
+                    <header>
+                        <h3>Publications</h3>
+                    </header>
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning: UAI 2023 In submission</h4>
+							<p>Bingshan Hu, Tianyue H. Zhang, Nidhi Hegde, Mark Schmidt</p>
+                            <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="project">
+                <div class="content">
+                    <header>
+                        <h3>Projects</h3>
+                    </header>
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <h4>Transfer Learning via Online System Identification.</h4>
+                            <a href="images/CPSC_533V_Project_Report.pdf" target="_blank">PDF</a>
+                            <a href="https://github.com/tianyuehz/533VProject-Transfer-Learning-on-CartPole.git"
+                               target="_blank">Code</a>
+                            <p>In this project, we implemented Soft Actor-Critic method on OpenAI gym classic
+                                control games with Proximal Policy optimization method and GAE lambda advantage
+                                function. We trained universal policy with dynamic system identification to aim to
+                                reduce Sim-to-Real gap.</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="talk">
+                <div class="content">
+                    <header>
+                        <h3>Talks</h3>
+                    </header>
+					<div class="row">
+                        <div class="col-6 col-12-small">
+                            <p>Deep exploration via randomized value function: RLRG 2023 Spring
+                            <a href="https://ubc.ca.panopto.com/Panopto/Pages/Viewer.aspx?id=73aee5a4-e197-4f7f-b6be-afda010b9027"
+                               target="_blank">Recording</a>
+                            <a href="images/chatGPT.pdf" target="_blank">Slides</a>
+							</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <p>Transformers, large models, language-models, and the magic behind chatGPT: Guest Lecture
+                                for CPSC 340
+                            <a href="https://ubc.ca.panopto.com/Panopto/Pages/Viewer.aspx?id=73aee5a4-e197-4f7f-b6be-afda010b9027"
+                               target="_blank">Recording</a>
+                            <a href="images/chatGPT.pdf" target="_blank">Slides</a>
+							</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <p>Language models are few-shot learners: MLRG 2022 Fall
+                            <a href="images/GPT-3.pdf" target="_blank">Slides</a>
+							</p>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-6 col-12-small">
+                            <p>Active Learning for semantic segmentation: MLRG 2022 Summer
+                            <a href="images/Active_learning.pdf" target="_blank">Slides</a>
+							</p>
+                        </div>
+                    </div>
+					<div class="row">
+                        <div class="col-6 col-12-small">
+                            <p>Probabilistic topic modelling
+                            <a href="images/PTM.pdf" target="_blank">Slides</a>
+							</p>
+                        </div>
+                    </div>
+				</div>
+            </section>
+            <section id="teaching">
+                <div class="content">
+                    <header>
+                        <h3>Teaching</h3>
+                    </header>
+                    <p>July 2017- Present: CPSC 532M/340: Machine Learning and Data Mining</p>
+                    <p>Jan. 2018- Apr. 2018: Math 152: Linear Systems</p>
+                    <p>Jan. 2017- Apr. 2018: CPSC 121: Models of Computation</p>
+                    <p>July 2017- Aug. 2017: Math 102: Integral Calculus</p>
+                </div>
+            </section>
+            <section id="Contact">
+                <div class="content">
+                    <header>
+                        <h3>Contact</h3>
+                    </header>
+                    <ul class="contact">
+                        <li class="icon solid fa-envelope"><a href="mailto:helenzhangtianyue@gmail.com">helenzhangtianyue@gmail.com</a>
+                        </li>
+                        <li class="icon solid fa-phone">(778) 918-6289</li>
+                        <li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
+                    </ul>
+                </div>
+            </section>
+        </div>
+    </div>
 
-									</div>
-									<div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
-									<div><img src="images/pic1.jpeg" alt="" width="240" height="320"/></div>
-								</section>
-								<section id="project">
-									<div class="content">
-										<header>
-											<h3>Projects</h3>
-										</header>
-									<div class="row">
-											<div class="col-6 col-12-small">
-												<h4>Transfer Learning via Online System Identification.</h4>
-											<a href="images/CPSC_533V_Project_Report.pdf" target="_blank">PDF</a>
-											<a href="https://github.com/tianyuehz/533VProject-Transfer-Learning-on-CartPole.git" target="_blank">Code</a>
-										<p>In this project, we implemented Soft Actor-Critic method on OpenAI gym classic
-											control games with Proximal Policy optimization method and GAE lambda advantage
-											function. We trained universal policy with dynamic system identification to aim to reduce Sim-to-Real gap.</p>
-										</div>
-<!--											<div class="col-6 col-12-small">-->
-<!--												<p>Image</p>-->
-<!--											</div>-->
-									</div>
-										</div>
-								</section>
-								<section id="talk">
-									<div class="content">
-										<header>
-											<h3>Talks</h3>
-										</header>
-										<div class="row">
-											<div class="col-6 col-12-small">
-										<h4>Language Modles are Few-shot Learners: MLRG 2022 Fall.
-										</h4>
-										<a href="images/GPT-3.pdf" target="_blank">Slides</a>
-										<p>Summary</p>
-											</div>
-<!--											<div class="col-6 col-12-small">-->
-<!--												<p>Image</p>-->
-<!--											</div>-->
-									</div>
-										</div>
-								</section>
-								<section id="teaching">
-									<div class="content">
-										<header>
-											<h3>Teaching</h3>
-										</header>
-										<p>July 2017- Present: CPSC 532M/340: Machine Learning and Data Mining</p>
-										<p>Jan. 2018- Apr. 2018: Math 152: Linear Systems</p>
-										<p>Jan. 2017- Apr. 2018: CPSC 121: Models of Computation</p>
-										<p>July 2017- Aug. 2017: Math 102: Integral Calculus</p>
-									</div>
-								</section>
-							<section id="Contact">
-									<div class="content">
-										<header>
-											<h3>Contact</h3>
-										</header>
-										<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="mailto:helenzhangtianyue@gmail.com">helenzhangtianyue@gmail.com</a></li>
-										<li class="icon solid fa-phone">(778) 918-6289</li>
-											<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
-									</ul>
-									</div>
-								</section>
-						</div>
-					</div>
+    <!--				&lt;!&ndash; Sidebar &ndash;&gt;-->
+    <!--					<div id="sidebar">-->
+    <!--						<div class="inner">-->
 
-<!--				&lt;!&ndash; Sidebar &ndash;&gt;-->
-<!--					<div id="sidebar">-->
-<!--						<div class="inner">-->
+    <!--&lt;!&ndash;							&lt;!&ndash; Menu &ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;								<nav id="menu">&ndash;&gt;-->
+    <!--&lt;!&ndash;									<header class="major">&ndash;&gt;-->
+    <!--&lt;!&ndash;										<h2>Menu</h2>&ndash;&gt;-->
+    <!--&lt;!&ndash;									</header>&ndash;&gt;-->
+    <!--&lt;!&ndash;									<ul>&ndash;&gt;-->
+    <!--&lt;!&ndash;										<li><a href="index.html">Home</a></li>&ndash;&gt;-->
+    <!--&lt;!&ndash;										<li><a href="Projects.html">Projects</a></li>&ndash;&gt;-->
+    <!--&lt;!&ndash;										<li><a href="Talks.html">Talks</a></li>&ndash;&gt;-->
+    <!--&lt;!&ndash;									</ul>&ndash;&gt;-->
+    <!--&lt;!&ndash;								</nav>&ndash;&gt;-->
 
-<!--&lt;!&ndash;							&lt;!&ndash; Menu &ndash;&gt;&ndash;&gt;-->
-<!--&lt;!&ndash;								<nav id="menu">&ndash;&gt;-->
-<!--&lt;!&ndash;									<header class="major">&ndash;&gt;-->
-<!--&lt;!&ndash;										<h2>Menu</h2>&ndash;&gt;-->
-<!--&lt;!&ndash;									</header>&ndash;&gt;-->
-<!--&lt;!&ndash;									<ul>&ndash;&gt;-->
-<!--&lt;!&ndash;										<li><a href="index.html">Home</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;										<li><a href="Projects.html">Projects</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;										<li><a href="Talks.html">Talks</a></li>&ndash;&gt;-->
-<!--&lt;!&ndash;									</ul>&ndash;&gt;-->
-<!--&lt;!&ndash;								</nav>&ndash;&gt;-->
+    <!--							&lt;!&ndash; Section &ndash;&gt;-->
+    <!--								<section>-->
+    <!--									<header class="major">-->
+    <!--										<h2>Get in touch</h2>-->
+    <!--									</header>-->
+    <!--									<ul class="contact">-->
+    <!--										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>-->
+    <!--										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>-->
+    <!--									</ul>-->
+    <!--								</section>-->
 
-<!--							&lt;!&ndash; Section &ndash;&gt;-->
-<!--								<section>-->
-<!--									<header class="major">-->
-<!--										<h2>Get in touch</h2>-->
-<!--									</header>-->
-<!--									<ul class="contact">-->
-<!--										<li class="icon solid fa-envelope"><a href="#">helenzhangtianyue@gmail.com</a></li>-->
-<!--										<li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>-->
-<!--									</ul>-->
-<!--								</section>-->
+    <!--							&lt;!&ndash; Footer &ndash;&gt;-->
+    <!--								<footer id="footer">-->
+    <!--									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>-->
+    <!--								</footer>-->
 
-<!--							&lt;!&ndash; Footer &ndash;&gt;-->
-<!--								<footer id="footer">-->
-<!--									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>-->
-<!--								</footer>-->
+    <!--						</div>-->
+</div>
 
-<!--						</div>-->
-					</div>
+</div>
 
-			</div>
+<!-- Scripts -->
+<script src="assets/js/jquery.min.js"></script>
+<script src="assets/js/browser.min.js"></script>
+<script src="assets/js/breakpoints.min.js"></script>
+<script src="assets/js/util.js"></script>
+<script src="assets/js/main.js"></script>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+</body>
 </html>
