--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 						supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
 						Previously, I graduated from UBC with combined
                         honours in Computer Science and Mathematics.</p>
-					<p>My research interests broadly includes machine learning, reinforcement learning and
-                        optimization. My goal is to understand and optimize algorithms for efficient and practical decision-making under uncertainty</p>
+					<p>My research interest broadly includes machine learning, reinforcement learning and
+                        optimization. My goal is to understand and optimize algorithms for efficient and practical decision-making under uncertainty.</p>
                     <p>Here is my <a href="images/CV_2_0.pdf" target="_blank">CV</a>, and a picture of my <a href="images/cat.jpg" target="_blank">cat</a>.</p>
                 </div>
                 <div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
