--- a/index.html
+++ b/index.html
@@ -94,9 +94,6 @@
 					<div class="row">
                         <div class="col-6 col-12-small">
                             <p>Deep exploration via randomized value function: RLRG 2023 Spring
-                            <a href="https://ubc.ca.panopto.com/Panopto/Pages/Viewer.aspx?id=73aee5a4-e197-4f7f-b6be-afda010b9027"
-                               target="_blank">Recording</a>
-                            <a href="images/chatGPT.pdf" target="_blank">Slides</a>
 							</p>
                         </div>
                     </div>
@@ -136,7 +133,7 @@
             <section id="teaching">
                 <div class="content">
                     <header>
-                        <h3>Teaching</h3>
+                        <h3>Teaching Assistant</h3>
                     </header>
                     <p>July 2017- Present: CPSC 532M/340: Machine Learning and Data Mining</p>
                     <p>Jan. 2018- Apr. 2018: Math 152: Linear Systems</p>
