--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 					<div class="row">
                         <div class="col-6 col-12-small">
                             <p>Deep exploration via randomized value function: RLRG 2023 Spring
+                                <a href="images/RLSVI.pdf" target="_blank">Slides</a>
 							</p>
                         </div>
                     </div>
