--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <p>M.Sc. in Computer Science, UBC</p>
                     </header>
                     <p>I am a current master's student in computer science at the University of
-                        British Columbia, under the supervision of
+                        British Columbia, in lab <a href="images/lab.jpg">ml-568</a> under the supervision of
                         <a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. I will be starting my Ph.D. this fall at Mila/Université de Montréal under the
 						supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
 						Previously, I graduated from UBC with combined
@@ -60,10 +60,13 @@
                     </header>
                     <div class="row">
                         <div class="col-6 col-12-small">
-                            <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning: UAI 2023 In submission</h4>
-							<p>Bingshan Hu, Tianyue H. Zhang, Nidhi Hegde, Mark Schmidt</p>
+                            <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
+                            <h4>UAI 2023 (Oral presentation)</h4>
+							<p>B. Hu, <b>T. Zhang,</b> N. Hegde, M. Schmidt. </p>
                             <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
+                            <a href="images/Upperbound_poster.pdf" target="_blank">Poster</a>
                         </div>
+                        <div><img src="images/ots.jpg" alt="" height="240"/></div>
                     </div>
                 </div>
             </section>
@@ -83,6 +86,7 @@
                                 function. We trained universal policy with dynamic system identification to aim to
                                 reduce Sim-to-Real gap.</p>
                         </div>
+                        <div><img src="images/uposi.png" alt="" height="240"/></div>
                     </div>
                 </div>
             </section>
@@ -100,7 +104,7 @@
                     </div>
                     <div class="row">
                         <div class="col-6 col-12-small">
-                            <p>Transformers, large models, language-models, and the magic behind chatGPT: Guest Lecture
+                            <p>Transformers, large language-models, and the magic behind chatGPT: Guest Lecture
                                 for CPSC 340
                             <a href="https://ubc.ca.panopto.com/Panopto/Pages/Viewer.aspx?id=73aee5a4-e197-4f7f-b6be-afda010b9027"
                                target="_blank">Recording</a>
