--- a/index.html
+++ b/index.html
@@ -61,10 +61,12 @@
                     <div class="row">
                         <div class="col-6 col-12-small">
                             <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
-                            <h4>UAI 2023 (Oral presentation)</h4>
+                            <h4>UAI 2023</h4>
 							<p>B. Hu, <b>T. Zhang,</b> N. Hegde, M. Schmidt. </p>
+                            <a href="https://proceedings.mlr.press/v216/hu23a.html" target="_blank">Paper</a>
                             <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
-                            <a href="images/Upperbound_poster.pdf" target="_blank">Poster</a>
+                            <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
+                            <a href="images/UAI_poster.pdf" target="_blank">Poster (UAI)</a>
                         </div>
                         <div><img src="images/ots.jpg" alt="" height="240"/></div>
                     </div>
