--- a/index.html
+++ b/index.html
@@ -40,15 +40,16 @@
                         <h2>Tianyue (Helen) Zhang 张天玥</h2>
                         <p>M.Sc. in Computer Science, UBC</p>
                     </header>
-                    <p>I am a current master's student in computer science at the University of
-                        British Columbia, in lab <a href="images/lab.jpg">ml-568</a> under the supervision of
-                        <a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. I will be starting my Ph.D. this fall at Mila/Université de Montréal under the
+                    <p>I am a first year Ph.D. student in computer science at Mila/Université de Montréal under the
 						supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
-						Previously, I graduated from UBC with combined
-                        honours in Computer Science and Mathematics.</p>
+
 					<p>My research interest broadly includes machine learning, reinforcement learning and
                         optimization. My goal is to understand and optimize algorithms for efficient and practical decision-making under uncertainty.</p>
-                    <p>Here is my <a href="images/CV_2_0.pdf" target="_blank">CV</a>, and a picture of my <a href="images/cat.jpg" target="_blank">cat</a>.</p>
+
+                    <p>Previously, I obtained my Master's degree at the University of British Columbia, in lab <a href="images/lab.jpg">ml-568</a> under the supervision of
+                        <a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>. </p>
+
+                    <p>Here is my <a href="images/CV_061123.pdf" target="_blank">CV</a>, and a picture of my <a href="images/cat.jpg" target="_blank">cat</a>.</p>
                 </div>
                 <div><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p></div>
                 <div><img src="images/pic1.jpeg" alt="" width="240" height="320"/></div>
@@ -58,6 +59,20 @@
                     <header>
                         <h3>Publications</h3>
                     </header>
+                     <div class="row">
+                        <div class="col-6 col-12-small">
+                            <h4>Posterior Sample Efficient Algorithms for Stochastic Bandits</h4>
+                            <h4>AISTATS 2024 (In submission)</h4>
+                            <p>B. Hu, <b>T. Zhang,</b> M. Lecuyer, N. Hegde</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-12-small">
+                            <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited</h4>
+                            <h4>Opt Workshop, Neurips 2023</h4>
+							<p>B. Hu, <b>T. Zhang,</b> </p>
+                        </div>
+                    </div>
                     <div class="row">
                         <div class="col-6 col-12-small">
                             <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
@@ -72,23 +87,21 @@
                     </div>
                 </div>
             </section>
-            <section id="project">
+            <section id="Thesis">
                 <div class="content">
                     <header>
-                        <h3>Projects</h3>
+                        <h3>Thesis</h3>
                     </header>
-                    <div class="row">
+                     <div class="row">
                         <div class="col-6 col-12-small">
-                            <h4>Transfer Learning via Online System Identification.</h4>
-                            <a href="images/CPSC_533V_Project_Report.pdf" target="_blank">PDF</a>
-                            <a href="https://github.com/tianyuehz/533VProject-Transfer-Learning-on-CartPole.git"
-                               target="_blank">Code</a>
-                            <p>In this project, we implemented Soft Actor-Critic method on OpenAI gym classic
-                                control games with Proximal Policy optimization method and GAE lambda advantage
-                                function. We trained universal policy with dynamic system identification to aim to
-                                reduce Sim-to-Real gap.</p>
+                            <h4>Optimistic Thompson Sampling: Strategic Exploration in Bandits and Reinforcement Learning </h4>
+                            <h4>Master's Thesis</h4>
+                            <p>Supervisory Committee: Mark Schmidt, Mathias Lecuyer</p>
+                            <a href="images/ubc_2023_november_zhang_tianyue.pdf" target="_blank">PDF</a>
+                            <a href="images/Master's_thesis_slides.pdf" target="_blank">Slides</a>
                         </div>
-                        <div><img src="images/uposi.png" alt="" height="240"/></div>
+                         <div></div>
+                         <div><img src="images/cat_mdp.png" alt="" height="240"/></div>
                     </div>
                 </div>
             </section>
@@ -142,10 +155,11 @@
                     <header>
                         <h3>Teaching Assistant</h3>
                     </header>
-                    <p>July 2017- Present: CPSC 532M/340: Machine Learning and Data Mining</p>
-                    <p>Jan. 2018- Apr. 2018: Math 152: Linear Systems</p>
-                    <p>Jan. 2017- Apr. 2018: CPSC 121: Models of Computation</p>
-                    <p>July 2017- Aug. 2017: Math 102: Integral Calculus</p>
+                    <p>Sept 2023- Present: Mila/Polytechnique Montreal INF8245E - Machine Learning</p>
+                    <p>July 2017- Apr. 2023: UBC CPSC 532M/340: Machine Learning and Data Mining</p>
+                    <p>Jan. 2018- Apr. 2018: UBC Math 152: Linear Systems</p>
+                    <p>Jan. 2017- Apr. 2018: UBC CPSC 121: Models of Computation</p>
+                    <p>July 2017- Aug. 2017: UBC Math 102: Integral Calculus</p>
                 </div>
             </section>
             <section id="Contact">
@@ -154,10 +168,9 @@
                         <h3>Contact</h3>
                     </header>
                     <ul class="contact">
-                        <li class="icon solid fa-envelope"><a href="mailto:helenzhangtianyue@gmail.com">helenzhangtianyue@gmail.com</a>
+                        <li class="icon solid fa-envelope"><a href="mailto:tianyue.zhang@mila.quebec">tianyue.zhang@mila.quebec</a>
                         </li>
-                        <li class="icon solid fa-phone">(778) 918-6289</li>
-                        <li class="icon solid fa-map-marker-alt"><a href="#">Vancouver, BC Canada</a></li>
+                        <li class="icon solid fa-map-marker-alt"><a href="#">Montreal, QC Canada</a></li>
                     </ul>
                 </div>
             </section>
