--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                         <div class="col-6 col-12-small">
                             <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited</h4>
                             <h4>Opt Workshop, Neurips 2023</h4>
-							<p>B. Hu, <b>T. Zhang,</b> </p>
+							<p>B. Hu, <b>T. Zhang</b> </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-6 col-12-small">
                             <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
                             <h4>UAI 2023</h4>
-							<p>B. Hu, <b>T. Zhang,</b> N. Hegde, M. Schmidt. </p>
+							<p>B. Hu, <b>T. Zhang,</b> N. Hegde, M. Schmidt </p>
                             <a href="https://proceedings.mlr.press/v216/hu23a.html" target="_blank">Paper</a>
                             <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
                             <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
