--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                         <h2>Tianyue (Helen) Zhang 张天玥</h2>
                         <p>M.Sc. in Computer Science, UBC</p>
                     </header>
-                    <p>I am a first year Ph.D. student in computer science at Mila/Université de Montréal under the
-						supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
+                    <p>I am a first year Ph.D. student in computer science at <a href = "https://mila.quebec/">Mila</a>/Université de Montréal,
+                        <a href="https://diro.umontreal.ca/">DIRO</a>, under the supervision of <a href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>.
 
-					<p>My research interest broadly includes machine learning, reinforcement learning and
+					<p>My research interest broadly includes machine learning, reinforcement learning, bandits and
                         optimization. My goal is to understand and optimize algorithms for efficient and practical decision-making under uncertainty.</p>
 
                     <p>Previously, I obtained my Master's degree at the University of British Columbia, in lab <a href="images/lab.jpg">ml-568</a> under the supervision of
@@ -83,7 +83,7 @@
                             <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
                             <a href="images/UAI_poster.pdf" target="_blank">Poster (UAI)</a>
                         </div>
-                        <div><img src="images/ots.jpg" alt="" height="240"/></div>
+                        <div><img src="images/ots.jpg" alt="" height="200"/></div>
                     </div>
                 </div>
             </section>
