--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
                 <header id="header">
                     <!--									<a href="index.html" class="logo">Home</a>-->
                     <ul class="icons">
+                        <li><a href="https://scholar.google.com/citations?hl=en&user=6dHuGwkAAAAJ"
+                                class="icon brands fa-google"><span class="label">GoogleScholar</span></a></li>
                         <li><a href="https://twitter.com/HelennnnnnZhang" class="icon brands fa-twitter"><span
                                     class="label">Twitter</span></a></li>
                         <li><a href="https://www.linkedin.com/in/helen-zhang-tianyue"
