--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <div class="content">
                         <header>
                             <h2>Tianyue (Helen) Zhang 张天玥</h2>
-                            <p>Ph.D. in Computer Science, Mila</p>
+                            <p>Ph.D. student @ Mila</p>
                         </header>
                         <p>I am a first year Ph.D. student in computer science at <a
                                 href="https://mila.quebec/">Mila</a>/Université de Montréal,
@@ -54,17 +54,22 @@
 
                         <p>My research interest broadly includes machine learning, optimization, reinforcement learning
                             and bandits. My goal is to understand, design and optimize machine learning algorithms that
-                            are practical and povably efficient.</p>
+                            are practical and provably efficient. Here is my <a href="images/CV_021524.pdf"
+                                target="_blank">CV</a>.</p>
 
                         <p>I was born in Gansu and grow up in Guangzhou, China. I obtained my Bachlor's (combined honors
                             in computer science and mathematics) and Master's degree at the University of British
-                            Columbia, Vancouver. I worked in lab <a href="images/lab.jpg">ml-568</a> under the
+                            Columbia, Vancouver, where I worked in lab <a href="images/lab.jpg">ml-568</a> under the
                             supervision of <a href="https://www.cs.ubc.ca/~schmidtm/">Dr. Mark Schmidt</a>.
                         </p>
 
-                        <p>I am an organizer for <a href="https://sites.google.com/view/women-at-mila">Women@Mila</a>.
-                            Here is my <a href="images/CV_021524.pdf" target="_blank">CV</a>, and a picture of my cat <a
-                                href="images/cat.jpg" target="_blank">Cashew</a>.</p>
+                        <p>I am an organizer for <a href="https://sites.google.com/view/women-at-mila">Women@Mila</a>
+                            and <a href="https://mtl-mlopt.github.io/">MTL MLOpt</a>.
+                            Here is a picture of my cat <a href="images/cat.jpg" target="_blank">Cashew</a>. In my free
+                            time, I enjoy going <a href="images/up.jpg" target="_blank">up</a>, <a
+                                href="images/down.JPG" target="_blank">down</a>, and <a href="images/around.jpg"
+                                target="_blank">around</a>.
+                        </p>
                     </div>
                     <div>
                         <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</p>
@@ -76,18 +81,19 @@
                         <header>
                             <h3>Publications</h3>
                         </header>
-                        <!-- <div class="row">
+                        <div class="row">
                             <div class="col-6 col-12-small">
-                                <h4>Posterior Sample Efficient Algorithms for Stochastic Bandits</h4>
-                                <h4>AISTATS 2024 (In submission)</h4>
-                                <p>B. Hu, <b>T. Zhang,</b> M. Lecuyer, N. Hegde</p>
+                                <h4>On PI Controllers for Updating Lagrange Multipliers in Constrained Optimization</h4>
+                                <h4>ICML 2024</h4>
+                                <p>M. Sohrabi*, J. Ramirez*, <b>T. H. Zhang</b>, S. Lacoste-Julien and J. Gallego-Posada
+                                </p>
                             </div>
-                        </div> -->
+                        </div>
                         <div class="row">
                             <div class="col-6 col-12-small">
                                 <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited</h4>
                                 <h4>Opt Workshop, Neurips 2023</h4>
-                                <p>B. Hu, <b>T. Zhang</b></p>
+                                <p>B. Hu, <b>T. H. Zhang</b></p>
                                 <a href="https://opt-ml.org/papers/2023/paper85.pdf" target="_blank">Paper</a>
                                 <a href="images/Opt_poster.pptx.pdf">Poster</a>
                                 <p></p>
@@ -98,7 +104,7 @@
                             <div class="col-6 col-12-small">
                                 <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
                                 <h4>UAI 2023</h4>
-                                <p>B. Hu, <b>T. Zhang,</b> N. Hegde, M. Schmidt </p>
+                                <p>B. Hu, <b>T. H. Zhang</b>, N. Hegde, M. Schmidt </p>
                                 <a href="https://proceedings.mlr.press/v216/hu23a.html" target="_blank">Paper</a>
                                 <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
                                 <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
@@ -132,6 +138,13 @@
                         <header>
                             <h3>Talks</h3>
                         </header>
+                        <div class="row">
+                            <div class="col-6 col-12-small">
+                                <p>Safe Reinforcement Learning from Human Feedback: RLHF reading group @Mila
+                                    <a href="images/srlhf.pdf" target="_blank">Slides</a>
+                                </p>
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-6 col-12-small">
                                 <p>Deep exploration via randomized value function: RLRG 2023 Spring
