--- a/index.html
+++ b/index.html
@@ -84,33 +84,43 @@
                         <div class="row">
                             <div class="col-6 col-12-small">
                                 <h4>On PI Controllers for Updating Lagrange Multipliers in Constrained Optimization</h4>
-                                <h4>ICML 2024</h4>
+                                <p>ICML 2024 <a href="https://arxiv.org/abs/2406.04558" target="_blank">Paper</a> </p>
                                 <p>M. Sohrabi*, J. Ramirez*, <b>T. H. Zhang</b>, S. Lacoste-Julien and J. Gallego-Posada
                                 </p>
+                                <p></p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-6 col-12-small">
-                                <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited</h4>
-                                <h4>Opt Workshop, Neurips 2023</h4>
+                                <h4>Efficient and Adaptive Posterior Sampling Algorithms for Bandits</h4>
+                                <p><a href="https://arxiv.org/abs/2405.01010" target="_blank">Paper</a></p>
+                                <p>B. Hu, Z. Huang, <b>T. H. Zhang</b>, M. Lécuyer, N. Hegde </p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-6 col-12-small">
+                                <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited
+                                </h4>
+                                <p>Opt Workshop @ Neurips 2023 <a href="https://opt-ml.org/papers/2023/paper85.pdf"
+                                        target="_blank">Paper</a>
+                                    <a href="images/Opt_poster.pptx.pdf">Poster</a>
+                                </p>
                                 <p>B. Hu, <b>T. H. Zhang</b></p>
-                                <a href="https://opt-ml.org/papers/2023/paper85.pdf" target="_blank">Paper</a>
-                                <a href="images/Opt_poster.pptx.pdf">Poster</a>
                                 <p></p>
                             </div>
-                            <div></div>
                         </div>
                         <div class="row">
                             <div class="col-6 col-12-small">
                                 <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
-                                <h4>UAI 2023</h4>
+                                <p>UAI 2023 <a href="https://proceedings.mlr.press/v216/hu23a.html"
+                                        target="_blank">Paper</a>
+                                    <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP"
+                                        target="_blank">Code</a>
+                                    <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
+                                    <a href="images/UAI_poster.pdf" target="_blank">Poster (UAI)</a>
+                                </p>
                                 <p>B. Hu, <b>T. H. Zhang</b>, N. Hegde, M. Schmidt </p>
-                                <a href="https://proceedings.mlr.press/v216/hu23a.html" target="_blank">Paper</a>
-                                <a href="https://github.com/tianyuehz/Thompson_Sampling_MDP" target="_blank">Code</a>
-                                <a href="images/Upperbound_poster.pdf" target="_blank">Poster (Upperbound)</a>
-                                <a href="images/UAI_poster.pdf" target="_blank">Poster (UAI)</a>
                             </div>
-                            <div><img src="images/ots.jpg" alt="" height="200" /></div>
                         </div>
                     </div>
                 </section>
