updating research goals

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                                 href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>. Here is our
                             <a href="images/Mila_Group.jpg">group</a>.
 
-                        <p>My research interest broadly includes machine learning, optimization, reinforcement learning
-                            and bandits. My goal is to understand, design and optimize machine learning algorithms that
-                            are practical and provably efficient. Here is my <a href="images/CV_021524.pdf"
+                        <p>My research focuses on understanding and improving optimization algorithms in modern machine
+                            learning and deep learning. Here is a <a href="images/research_goals.pdf"
+                                target="_blank">longer description</a>. Here is my <a href="images/CV_021524.pdf"
                                 target="_blank">CV</a>.</p>
 
                         <p>I was born in Gansu and grow up in Guangzhou, China. I obtained my Bachlor's (combined honors
