--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
                                 class="icon brands fa-linkedin"><span class="label">Linkedin</span></a></li>
                         <li><a href="https://github.com/tianyuehz" class="icon brands fa-github"><span
                                     class="label">github</span></a></li>
-                        <li><a href="https://www.instagram.com/helennnnnnnzhang/" class="icon brands fa-instagram"><span
-                                    class="label">Instagram</span></a></li>
+
                     </ul>
                 </header>
 
@@ -46,15 +45,14 @@
                             <h2>Tianyue (Helen) Zhang 张天玥</h2>
                             <p>Ph.D. student @ Mila</p>
                         </header>
-                        <p>I am a first year Ph.D. student in computer science at <a
+                        <p>I am a second year Ph.D. student in computer science at <a
                                 href="https://mila.quebec/">Mila</a>/Université de Montréal,
                             <a href="https://diro.umontreal.ca/">DIRO</a>, under the supervision of <a
                                 href="http://www.iro.umontreal.ca/~slacoste/">Dr. Simon Lacoste-Julien</a>. Here is our
                             <a href="images/Mila_Group.jpg">group</a>.
 
-                        <p>My research focuses on understanding and improving optimization algorithms in modern machine
-                            learning and deep learning. Here is a <a href="images/research_goals.pdf"
-                                target="_blank">longer description</a>. Here is my <a href="images/CV_021524.pdf"
+                        <p>My research interest is understanding and improving optimization algorithms in modern machine
+                            learning and deep learning. Here is my <a href="images/CV_021524.pdf"
                                 target="_blank">CV</a>.</p>
 
                         <p>I was born in Gansu and grow up in Guangzhou, China. I obtained my Bachlor's (combined honors
@@ -82,7 +80,18 @@
                             <h3>Publications</h3>
                         </header>
                         <div class="row">
-                            <div class="col-6 col-12-small">
+                            <div class="col-8 col-12-small">
+                                <h4>Understanding Adam Requires Better Rotation Dependent Assumptions</h4>
+                                <p>Arxiv preprint, in submission <a href="https://arxiv.org/abs/2410.19964"
+                                        target="_blank">Paper</a> </p>
+                                <p> L. Maes*, <b>T. H. Zhang*</b>, A. Jolicoeur-Martineau, I. Mitliagkas, D. Scieur,
+                                    S. Lacoste-Julien, C. Guille-Escuret
+                                </p>
+                                <p></p>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-8 col-12-small">
                                 <h4>On PI Controllers for Updating Lagrange Multipliers in Constrained Optimization</h4>
                                 <p>ICML 2024 <a href="https://arxiv.org/abs/2406.04558" target="_blank">Paper</a> </p>
                                 <p>M. Sohrabi*, J. Ramirez*, <b>T. H. Zhang</b>, S. Lacoste-Julien and J. Gallego-Posada
@@ -91,14 +100,14 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-6 col-12-small">
+                            <div class="col-8 col-12-small">
                                 <h4>Efficient and Adaptive Posterior Sampling Algorithms for Bandits</h4>
                                 <p><a href="https://arxiv.org/abs/2405.01010" target="_blank">Paper</a></p>
                                 <p>B. Hu, Z. Huang, <b>T. H. Zhang</b>, M. Lécuyer, N. Hegde </p>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-6 col-12-small">
+                            <div class="col-8 col-12-small">
                                 <h4>From 6235149080811616882909238708 to 29: Vanilla Thompson Sampling Revisited
                                 </h4>
                                 <p>Opt Workshop @ Neurips 2023 <a href="https://opt-ml.org/papers/2023/paper85.pdf"
@@ -110,7 +119,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-6 col-12-small">
+                            <div class="col-8 col-12-small">
                                 <h4>Optimistic Thompson Sampling for Episodic Reinforcement Learning</h4>
                                 <p>UAI 2023 <a href="https://proceedings.mlr.press/v216/hu23a.html"
                                         target="_blank">Paper</a>
